# accounting

./: .gitignore  CLAUDE.md  CLOUD_CARBON_ACCOUNTING_DEEPDIVE.md  CLOUD_CARBON_ACCOUNTING_INVENTORY.md  DATA_REQUEST.md  HYPERSCALER_CARBON_ACCOUNTING.md  NORMATIVE_REFERENCE_ESTIMATE.md  README.md  SCHEMA.md  estimation.md  generate_case_study_data.py  pyproject.toml  vision_paper_notes.md
.claude/: settings.json
aws/: crawl_aws.py  monthly_carbon_emissions.csv
azure/: analysis.ipynb  crawl_azure.py  setup.md
data/: carbon_intensity_2026-04.csv  carbon_intensity_2026-05_10d.csv  carbonintensity_2026-03-23.csv  download_carbon_intensity.py
experiments/: README.md  a0_sanity.py  prepare_data.py  preprocess.py  run_simulation.py  trace_analysis.py
experiments_old/: README.md  a0_sanity.py  a1_sunk_carbon.py  a2_reconciliation.py  constants.py  metrics.py  picocloud.py  run_simulation.py  timeseries.py
gcp/: carbonintensity_2026-03-23.csv  crawl_gcp.py  crawl_vm_times.py  deploy.py  experiment.json  fetch_carbon_intensity.py  notes.txt  vm_times.csv
ideas/: layer_1.md  rSCI_EFFECTIVENESS.md  rSCI_effectiveness.md
old/: Accounting.md  HYPERSCALER_CARBON_ACCOUNTING.md  thoughts.md
paper/: .gitignore  SECTIONS.md  WRITING_PLAN.md  acmart.cls  discussion_sketch.md  experiments_design.md  paper.tex  references.bib  related_work_scan.md  structure_options.md
references/: BOAVIZTAPI_2024.md  CINERGY_2025.md  INDEX.md  SCI_AI.md  SCI_SUNK_CARBON.md  SHARMA_2024_SHAPLEY.md  cross_provider_synthesis.md  methodology_comparison.md  terminology.md
scaleway/: README.md  (+7 more)
(+72 files in other folders)
